--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "description": "Bot for Real Estate",
   "main": "index.js",
   "scripts": {
+    "pretest": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --out-dir build",
     "predeploy": "npm run build",
     "deploy": "claudia update"
   },
   "dependencies": {
-    "claudia-bot-builder": "1.4.0",
+    "claudia-bot-builder": "1.4.1",
     "node-wit": "github:aluxian/node-wit"
   },
   "devDependencies": {
-    "babel-cli": "6.11.4"
+    "babel-cli": "6.11.4",
+    "babel-eslint": "6.1.2",
+    "eslint": "2.13.1",
+    "eslint-config-semistandard": "6.0.2",
+    "eslint-config-standard": "5.3.5",
+    "eslint-plugin-babel": "3.3.0",
+    "eslint-plugin-promise": "1.3.2",
+    "eslint-plugin-react": "5.2.2",
+    "eslint-plugin-standard": "1.3.3"
   },
   "repository": {
     "type": "git",
