Move towards node-lambda and configure babel

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "babel/object-shorthand": 1,
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
-    "babel/flow-object-type": 1
+    "babel/flow-object-type": 1,
+    "space-before-function-paren": ["error", "never"]
   }
 }
