--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Bot for Real Estate",
   "main": "index.js",
   "scripts": {
-    "pretest": "eslint src",
+    "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir build",
     "predeploy": "npm run build",
-    "deploy": "claudia update"
+    "deploy": "node-lambda deploy --configFile deploy.env",
+    "build": "babel src --out-dir build",
+    "lint": "eslint src"
   },
   "dependencies": {
-    "claudia-bot-builder": "1.4.1",
+    "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-preset-es2015": "6.13.1",
+    "babel-preset-stage-0": "6.5.0",
     "node-wit": "github:aluxian/node-wit"
   },
   "devDependencies": {
@@ -23,7 +27,8 @@
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-promise": "1.3.2",
     "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-standard": "1.3.3"
+    "eslint-plugin-standard": "1.3.3",
+    "node-lambda": "0.8.6"
   },
   "repository": {
     "type": "git",
