--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Bot for Real Estate",
   "private": true,
   "dependencies": {
-    "babel-plugin-default-import-checker": "1.0.8",
-    "babel-plugin-transform-runtime": "6.12.0",
-    "babel-preset-es2015": "6.13.1",
-    "babel-preset-stage-0": "6.5.0",
+    "babel-runtime": "6.11.6",
     "node-wit": "github:aluxian/node-wit"
   },
   "devDependencies": {
     "aws-sdk": "2.4.13",
     "aws-sdk-promise": "0.0.2",
     "babel-eslint": "6.1.2",
+    "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-preset-es2015": "6.13.1",
+    "babel-preset-stage-0": "6.5.0",
     "del": "2.2.1",
     "eslint": "2.13.1",
     "eslint-config-semistandard": "6.0.2",
