--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "babel-runtime": "6.11.6",
+    "claudia-api-builder": "1.5.1",
+    "claudia-bot-builder": "1.4.1",
+    "minimal-request-promise": "1.3.0",
     "node-wit": "github:aluxian/node-wit"
   },
   "devDependencies": {
