--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-runtime": "6.11.6",
     "claudia-api-builder": "1.5.1",
+    "dynasty": "0.2.5",
     "minimal-request-promise": "1.3.0",
     "node-wit": "github:aluxian/node-wit"
   },
