--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
-    "space-before-function-paren": ["error", "never"]
+    "space-before-function-paren": ["error", "never"],
+    "camelcase": 0
   }
 }
