--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
   ],
   "plugins": [
     "transform-runtime",
-    "default-import-checker"
-  ]
+    "default-import-checker",
+    "source-map-support-for-6"
+  ],
+  "sourceMaps": "inline"
 }
