--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "clairebot",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Bot for Real Estate",
+  "main": "build/index.js",
   "private": true,
+  "scripts": {
+    "start": "node build/index.js",
+    "build": "babel src --out-dir build",
+    "watch": "npm run build && (npm run build -- --watch &) && nodemon -w build build/index.js",
+    "deploy": "npm run build && modulus deploy"
+  },
   "dependencies": {
     "babel-runtime": "6.11.6",
-    "dynasty": "0.2.5",
-    "minimal-request-promise": "1.3.0",
-    "node-openweather": "0.0.5",
-    "node-wit": "github:aluxian/node-wit"
+    "forecast-io": "1.0.2",
+    "got": "6.3.0",
+    "koa": "2.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "2.4.13",
-    "aws-sdk-promise": "0.0.2",
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.1",
     "babel-preset-stage-0": "6.5.0",
-    "del": "2.2.1",
     "eslint": "2.13.1",
     "eslint-config-semistandard": "6.0.2",
     "eslint-config-standard": "5.3.5",
@@ -26,23 +30,6 @@
     "eslint-plugin-promise": "1.3.2",
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
-    "fs.promised": "3.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "6.1.2",
-    "gulp-eslint": "3.0.1",
-    "gulp-zip": "3.2.0",
-    "minimist": "1.2.0",
-    "node-uuid": "1.4.7",
-    "npmi": "2.0.1"
-  },
-  "author": "Alexandru Rosianu <rosian_alex@yahoo.com> (http://www.aluxian.com)",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vladstan/ClaireBot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/vladstan/ClaireBot/issues"
-  },
-  "homepage": "https://github.com/vladstan/ClaireBot#readme"
+    "modulus": "6.1.1"
+  }
 }
