--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "clairebot",
+  "name": "okclaire",
   "version": "0.2.0",
   "description": "Bot for Real Estate",
-  "main": "build/index.js",
+  "main": "dist/index.js",
   "private": true,
   "scripts": {
-    "start": "node build/index.js",
-    "build": "babel src --out-dir build",
-    "watch": "npm run build && (npm run build -- --watch &) && nodemon -w build build/index.js"
+    "start": "node dist/index.js",
+    "build": "babel src --out-dir dist",
+    "watch": "npm run build && (npm run build -- --watch &) && nodemon -w dist dist/index.js",
+    "deploy": "npm run build && modulus deploy -p okclaire"
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
     "forecast-io": "1.0.2",
     "got": "6.3.0",
-    "koa": "2.0.0"
+    "koa": "2.0.0",
+    "source-map-support": "0.4.2"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
@@ -28,7 +30,6 @@
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-promise": "1.3.2",
     "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-standard": "1.3.3",
-    "modulus": "6.1.1"
+    "eslint-plugin-standard": "1.3.3"
   }
 }
