--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "babel-runtime": "6.11.6",
     "forecast-io": "1.0.2",
     "got": "6.3.0",
-    "koa": "2.0.0",
-    "source-map-support": "0.4.2"
+    "koa": "2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
-    "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.1",
     "babel-preset-stage-0": "6.5.0",
