--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "okclaire",
   "version": "0.2.0",
   "description": "Bot for Real Estate",
-  "main": "dist/index.js",
+  "main": "dist/server.js",
   "private": true,
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "build": "babel src --out-dir dist",
-    "watch": "npm run build && (npm run build -- --watch &) && nodemon -w dist dist/index.js",
-    "deploy": "npm run build && modulus deploy -p okclaire"
+    "watch": "(npm run build -- --watch &) && sleep 3 && nodemon -w dist dist/server.js",
+    "deploy": "npm run build && modulus deploy -p okclaire",
+    "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")"
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
+    "bluebird": "3.4.1",
+    "deed": "1.0.0",
+    "es6-error": "3.0.1",
     "forecast-io": "1.0.2",
+    "generic-pool": "2.4.2",
     "got": "6.3.0",
-    "koa": "2.0.0"
+    "koa": "2.0.0",
+    "koa-bunyan-log": "2.0.1",
+    "koa-json-body": "5.0.0",
+    "koa-router": "7.0.1",
+    "module-index": "3.0.2",
+    "mongodb": "2.2.5"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
@@ -28,6 +38,7 @@
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-promise": "1.3.2",
     "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-standard": "1.3.3"
+    "eslint-plugin-standard": "1.3.3",
+    "ngrok": "2.2.2"
   }
 }
