--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
   "plugins": [
     "babel"
   ],
+  "globals": {
+    "log": true
+  },
   "extends": "semistandard",
   "rules": {
     "generator-star-spacing": 0,
