--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
   "dependencies": {
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
+    "chalk": "1.1.3",
     "deed": "1.0.0",
     "es6-error": "3.0.1",
     "forecast-io": "1.0.2",
     "generic-pool": "2.4.2",
     "got": "6.3.0",
     "koa": "2.0.0",
-    "koa-bunyan-log": "2.0.1",
     "koa-json-body": "5.0.0",
     "koa-router": "7.0.1",
-    "mongodb": "2.2.5"
+    "mongodb": "2.2.5",
+    "winston": "2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
