Improve logging and error handling

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "babel"
   ],
   "globals": {
-    "log": true
+    "log": true,
+    "logWarn": true,
+    "logError": true
   },
   "extends": "semistandard",
   "rules": {
@@ -22,6 +24,7 @@
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
-    "space-before-function-paren": ["error", "never"]
+    "space-before-function-paren": ["error", "never"],
+    "no-console": "error"
   }
 }
