--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "build": "babel src --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 3 && nodemon -w dist dist/server.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
-    "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")"
+    "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
+    "lint": "eslint src"
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
-    "chalk": "1.1.3",
-    "deed": "1.0.0",
-    "es6-error": "3.0.1",
     "forecast-io": "1.0.2",
     "generic-pool": "2.4.2",
     "got": "6.3.0",
     "koa": "2.0.0",
-    "koa-json-body": "5.0.0",
     "koa-router": "7.0.1",
     "mongodb": "2.2.5",
+    "morgan": "1.7.0",
+    "raw-body": "2.1.7",
     "winston": "2.2.0"
   },
   "devDependencies": {
