--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "got": "6.3.0",
     "koa": "2.0.0",
     "koa-router": "7.0.1",
+    "mixpanel": "0.4.0",
     "mongodb": "2.2.5",
     "morgan": "1.7.0",
     "raw-body": "2.1.7",
