--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
     "space-before-function-paren": ["error", "never"],
-    "no-console": "error"
+    "no-console": "error",
+    "comma-dangle": ["error", "always-multiline"]
   }
 }
