--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
     "forecast-io": "1.0.2",
-    "generic-pool": "2.4.2",
     "got": "6.3.0",
     "koa": "2.0.0",
     "koa-router": "7.0.1",
@@ -27,8 +26,10 @@
     "winston": "2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "6.11.4",
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.1",
     "babel-preset-stage-0": "6.5.0",
