--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "start": "node dist/server.js",
-    "build": "rm -rf dist && babel src --out-dir dist",
+    "build": "babel src --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 3 && nodemon -w dist dist/server.js",
-    "deploy": "npm run build && modulus deploy -p okclaire",
+    "deploy": "rm -rf dist && npm run build && modulus deploy -p okclaire",
     "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
     "lint": "eslint src"
   },
@@ -23,12 +23,14 @@
     "mongoose": "4.5.8",
     "morgan": "1.7.0",
     "raw-body": "2.1.7",
+    "source-map-support": "0.4.2",
     "winston": "2.2.0"
   },
   "devDependencies": {
     "babel-cli": "6.11.4",
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-stage-0": "6.5.0",
