--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "okclaire",
   "version": "0.2.0",
   "description": "Bot for Real Estate",
-  "main": "dist/server.js",
+  "main": "dist/main.js",
   "private": true,
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/main.js",
     "build": "rm -rf dist && babel src --out-dir dist",
-    "watch": "(npm run build -- --watch &) && sleep 3 && nodemon -w dist dist/server.js",
+    "watch": "(npm run build -- --watch &) && sleep 3 && nodemon -w dist dist/main.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
     "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
-    "test": "npm run build && ava --watch",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "(npm run build -- --watch &) && sleep 3 && ava --watch",
+    "coverage": "npm run build && nyc ava",
+    "report": "nyc report --reporter=html && open coverage/index.html"
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
@@ -45,7 +47,10 @@
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
-    "ngrok": "2.2.2"
+    "ngrok": "2.2.2",
+    "nyc": "8.0.0",
+    "supertest": "2.0.0",
+    "supertest-as-promised": "4.0.0"
   },
   "ava": {
     "files": [
