--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "morgan": "1.7.0",
     "raw-body": "2.1.7",
     "source-map-support": "0.4.2",
-    "winston": "2.2.0"
+    "winston": "2.2.0",
+    "winston-stream": "0.0.0"
   },
   "devDependencies": {
     "ava": "0.16.0",
