--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
+    "mockgoose": "6.0.6",
     "ngrok": "2.2.2",
     "nyc": "8.0.0",
     "supertest": "2.0.0",
