--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
     "coverage": "npm run build && nyc ava",
-    "report": "nyc report --reporter=html && open coverage/index.html"
+    "report": "nyc report --reporter=html"
   },
   "dependencies": {
     "babel-runtime": "6.11.6",
@@ -36,6 +36,7 @@
     "babel-cli": "6.11.4",
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
+    "babel-plugin-istanbul": "1.0.3",
     "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.2",
@@ -65,5 +66,13 @@
     "concurrency": 5,
     "require": "babel-register",
     "babel": "inherit"
+  },
+  "nyc": {
+    "require": "babel-register",
+    "include": [
+      "src"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
