--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
     "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
-    "clean": "rm -rf .nyc_output coverage dist",
+    "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
     "coverage": "npm run build && nyc ava",
@@ -53,6 +53,7 @@
     "mockgoose": "6.0.6",
     "ngrok": "2.2.2",
     "nyc": "8.0.0",
+    "rimraf": "2.5.4",
     "supertest": "2.0.0",
     "supertest-as-promised": "4.0.0"
   },
