--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
     "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
+    "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
@@ -17,8 +18,10 @@
     "report": "nyc report --reporter=html"
   },
   "dependencies": {
+    "app-module-path": "1.1.0",
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
+    "constitute": "1.6.2",
     "forecast-io": "1.0.2",
     "got": "6.3.0",
     "koa": "2.0.0",
@@ -38,6 +41,7 @@
     "babel-plugin-default-import-checker": "1.0.8",
     "babel-plugin-istanbul": "1.0.3",
     "babel-plugin-source-map-support-for-6": "0.0.5",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-stage-0": "6.5.0",
@@ -65,11 +69,17 @@
       "dist/**/*.js"
     ],
     "concurrency": 5,
-    "require": "babel-register",
+    "require": [
+      "babel-register",
+      "./dist/utils/test-register"
+    ],
     "babel": "inherit"
   },
   "nyc": {
-    "require": "babel-register",
+    "require": [
+      "babel-register",
+      "./dist/utils/test-register"
+    ],
     "include": [
       "src"
     ],
