--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "app-module-path": "1.1.0",
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
-    "constitute": "1.6.2",
     "forecast-io": "1.0.2",
     "got": "6.3.0",
     "koa": "2.0.0",
@@ -31,8 +30,7 @@
     "morgan": "1.7.0",
     "raw-body": "2.1.7",
     "source-map-support": "0.4.2",
-    "winston": "2.2.0",
-    "winston-stream": "0.0.0"
+    "winston": "2.2.0"
   },
   "devDependencies": {
     "ava": "0.16.0",
@@ -46,6 +44,7 @@
     "babel-preset-es2015": "6.13.2",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.11.6",
+    "core-decorators": "0.12.3",
     "eslint": "2.13.1",
     "eslint-config-semistandard": "6.0.2",
     "eslint-config-standard": "5.3.5",
