--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,6 @@
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
     "space-before-function-paren": ["error", "never"],
-    "comma-dangle": ["error", "always-multiline"],
-    "no-console": "error"
+    "comma-dangle": ["error", "always-multiline"]
   }
 }
