--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
     "coverage": "npm run build && nyc ava",
-    "report": "nyc report --reporter=html"
+    "report": "nyc report --reporter=html",
+    "logs": "modulus logs tail -p okclaire"
   },
   "dependencies": {
     "app-module-path": "1.1.0",
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
+    "core-decorators": "0.12.3",
     "forecast-io": "1.0.2",
     "got": "6.3.0",
     "koa": "2.0.0",
