--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "build": "npm run clean && babel src --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
-    "tunnel": "ngrok http $(node -e \"console.log(require('./dist/config').default.port)\")",
     "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
     "coverage": "npm run build && nyc ava",
-    "report": "nyc report --reporter=html",
-    "logs": "modulus logs tail -p okclaire"
+    "report": "nyc report --reporter=html"
   },
   "dependencies": {
     "app-module-path": "1.1.0",
@@ -56,7 +54,6 @@
     "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
     "mockgoose": "6.0.6",
-    "ngrok": "2.2.2",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
     "supertest": "2.0.0",
