Weather works, woohoo!

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/main.js",
     "build": "npm run clean && babel src --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
-    "deploy": "npm run build && modulus deploy -p okclaire",
     "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
+    "deploy": "npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
@@ -22,6 +22,7 @@
     "bluebird": "3.4.1",
     "core-decorators": "0.12.3",
     "forecast-io": "1.0.2",
+    "googlemaps": "1.11.1",
     "got": "6.3.0",
     "koa": "2.0.0",
     "koa-router": "7.0.1",
