--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,14 @@
 {
   "parser": "babel-eslint",
   "plugins": [
-    "babel"
+    "babel",
+    "flowtype"
   ],
+  "settings": {
+    "flowtype": {
+      "onlyFilesWithFlowAnnotation": false
+    }
+  },
   "extends": "semistandard",
   "rules": {
     "generator-star-spacing": 0,
@@ -20,6 +26,14 @@
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
     "space-before-function-paren": ["error", "never"],
-    "comma-dangle": ["error", "always-multiline"]
+    "comma-dangle": ["error", "always-multiline"],
+    "flowtype/define-flow-type": 1,
+    "flowtype/require-parameter-type": 1,
+    "flowtype/require-return-type": [1, "always", {"annotateUndefined": "never"}],
+    "flowtype/space-after-type-colon": [1, "always"],
+    "flowtype/space-before-type-colon": [1, "never"],
+    "flowtype/type-id-match": [1, "^([A-Z][a-z0-9]+)+Type$"],
+    "flowtype/use-flow-type": 1,
+    "flowtype/valid-syntax": 1
   }
 }
