--- a/package.json
+++ b/package.json
@@ -40,16 +40,19 @@
     "babel-plugin-default-import-checker": "1.0.8",
     "babel-plugin-istanbul": "1.0.3",
     "babel-plugin-source-map-support-for-6": "0.0.5",
+    "babel-plugin-syntax-flow": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-flow-strip-types": "6.8.0",
     "babel-plugin-transform-runtime": "6.12.0",
+    "babel-plugin-typecheck": "3.9.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.11.6",
-    "core-decorators": "0.12.3",
     "eslint": "2.13.1",
     "eslint-config-semistandard": "6.0.2",
     "eslint-config-standard": "5.3.5",
     "eslint-plugin-babel": "3.3.0",
+    "eslint-plugin-flowtype": "2.7.0",
     "eslint-plugin-promise": "1.3.2",
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
