--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "main": "dist/main.js",
   "private": true,
   "scripts": {
+    "postinstall": "typings install",
     "start": "node dist/main.js",
-    "build": "npm run clean && babel src --out-dir dist",
+    "clean": "rimraf .nyc_output coverage dist",
+    "build": "tsc",
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
     "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
-    "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
     "coverage": "npm run build && nyc ava",
     "report": "nyc report --reporter=html"
   },
   "dependencies": {
-    "app-module-path": "1.1.0",
-    "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
-    "core-decorators": "0.12.3",
     "forecast-io": "1.0.2",
     "googlemaps": "1.11.1",
     "got": "6.3.0",
@@ -35,33 +33,14 @@
   },
   "devDependencies": {
     "ava": "0.16.0",
-    "babel-cli": "6.11.4",
-    "babel-eslint": "6.1.2",
-    "babel-plugin-default-import-checker": "1.0.8",
-    "babel-plugin-istanbul": "1.0.3",
-    "babel-plugin-source-map-support-for-6": "0.0.5",
-    "babel-plugin-syntax-flow": "6.13.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-flow-strip-types": "6.8.0",
-    "babel-plugin-transform-runtime": "6.12.0",
-    "babel-plugin-typecheck": "3.9.0",
-    "babel-preset-es2015": "6.13.2",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.11.6",
-    "eslint": "2.13.1",
-    "eslint-config-semistandard": "6.0.2",
-    "eslint-config-standard": "5.3.5",
-    "eslint-plugin-babel": "3.3.0",
-    "eslint-plugin-flowtype": "2.7.0",
-    "eslint-plugin-promise": "1.3.2",
-    "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
     "mockgoose": "6.0.6",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
     "supertest": "2.0.0",
-    "supertest-as-promised": "4.0.0"
+    "supertest-as-promised": "4.0.0",
+    "typescript": "2.0.0",
+    "typings": "1.3.2"
   },
   "ava": {
     "files": [
