--- a/.babelrc
+++ b/.babelrc
@@ -30,7 +30,8 @@
       "plugins": [
         "espower",
         "istanbul",
-        "default-import-checker"
+        "default-import-checker",
+        "source-map-support-for-6"
       ]
     }
   },
