--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "private": true,
   "scripts": {
     "start": "node dist/main.js",
-    "build": "npm run clean && babel src --out-dir dist",
+    "build": "npm run clean && babel src --source-maps --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
     "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
-    "coverage": "npm run build && nyc ava",
-    "report": "nyc report --reporter=html"
+    "coverage": "npm run build && nyc ava && nyc report --reporter=html"
   },
   "dependencies": {
     "app-module-path": "1.1.0",
@@ -56,6 +55,7 @@
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
+    "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
@@ -82,7 +82,9 @@
       "./dist/utils/test-register"
     ],
     "include": [
-      "src"
+      "src",
+      "dist",
+      "tests"
     ],
     "sourceMap": false,
     "instrument": false
