--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "start": "node dist/main.js",
     "build": "npm run clean && babel src --source-maps --out-dir dist",
-    "watch": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/main.js",
-    "repl": "(npm run build -- --watch &) && sleep 5 && nodemon -w dist dist/repl.js",
+    "watch": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/main.js",
+    "repl": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/repl.js",
     "deploy": "npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
-    "test": "(npm run build -- --watch &) && sleep 5 && ava --watch",
+    "test": "(npm run build -- --watch &) && sleep 10 && ava --watch",
     "coverage": "npm run build && nyc ava && nyc report --reporter=html"
   },
   "dependencies": {
@@ -57,6 +57,7 @@
     "espower": "1.3.2",
     "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
+    "nodemon": "^1.10.0",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
     "supertest": "2.0.0",
