Add logs in BotMemory

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "babel",
     "flowtype"
   ],
+  "globals": {
+    "log": true
+  },
   "settings": {
     "flowtype": {
       "onlyFilesWithFlowAnnotation": false
