--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "espower": "1.3.2",
     "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
-    "nodemon": "^1.10.0",
+    "nodemon": "1.10.0",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
     "supertest": "2.0.0",
