--- a/.eslintrc
+++ b/.eslintrc
@@ -31,8 +31,8 @@
     "space-before-function-paren": ["error", "never"],
     "comma-dangle": ["error", "always-multiline"],
     "flowtype/define-flow-type": 1,
-    "flowtype/require-parameter-type": 1,
-    "flowtype/require-return-type": [1, "always", {"annotateUndefined": "never"}],
+    "flowtype/require-parameter-type": [1, "always"],
+    "flowtype/require-return-type": [1, "always"],
     "flowtype/space-after-type-colon": [1, "always"],
     "flowtype/space-before-type-colon": [1, "never"],
     "flowtype/type-id-match": [1, "^([A-Z][a-z0-9]+)+Type$"],
