--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "forecast-io": "1.0.2",
     "googlemaps": "1.11.1",
     "got": "6.3.0",
+    "is-url": "1.2.2",
     "koa": "2.0.0",
     "koa-router": "7.0.1",
     "mixpanel": "0.4.0",
