--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-standard": "1.3.3",
     "espower": "1.3.2",
+    "iflow-bluebird": "1.1.18",
     "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
     "nodemon": "1.10.0",
