--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "scripts": {
     "start": "node dist/main.js",
-    "build": "npm run clean && babel src/**/*.js --source-maps --out-dir dist",
+    "build": "npm run clean && babel src --source-maps --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/main.js",
     "repl": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/repl.js",
-    "deploy": "npm run build && modulus deploy -p okclaire",
+    "deploy": "npm run lint && npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
     "test": "(npm run build -- --watch &) && sleep 10 && ava --watch",
