--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mixpanel": "0.4.0",
     "mongoose": "4.5.8",
     "morgan": "1.7.0",
+    "opbeat": "3.15.0",
     "raw-body": "2.1.7",
     "source-map-support": "0.4.2",
     "winston": "2.2.0"
