--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bot for Real Estate",
   "main": "dist/main.js",
   "private": true,
+  "snyk": true,
   "scripts": {
+    "postinstall": "snyk protect",
     "start": "node dist/main.js",
     "build": "npm run clean && babel src --source-maps --out-dir dist",
     "watch": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/main.js",
@@ -12,8 +14,8 @@
     "deploy": "npm run lint && npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
-    "test": "(npm run build -- --watch &) && sleep 10 && ava --watch",
-    "coverage": "npm run build && nyc ava && nyc report --reporter=html"
+    "test": "snyk test && (npm run build -- --watch &) && sleep 10 && ava --watch",
+    "coverage": "snyk test && npm run build && nyc ava && nyc report --reporter=html"
   },
   "dependencies": {
     "app-module-path": "1.1.0",
@@ -29,6 +31,7 @@
     "morgan": "1.7.0",
     "opbeat": "3.15.0",
     "raw-body": "2.1.7",
+    "snyk": "1.18.1",
     "source-map-support": "0.4.2",
     "winston": "2.2.0"
   },
