--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-runtime": "6.11.6",
     "bluebird": "3.4.1",
     "forecast-io": "1.0.2",
+    "globby": "6.0.0",
     "googlemaps": "1.11.1",
     "got": "6.3.0",
     "is-url": "1.2.2",
