--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "npm run lint && npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
-    "test": "snyk test && (npm run build -- --watch &) && sleep 10 && ava --watch",
+    "test": "(npm run build -- --watch &) && sleep 10 && ava --watch --verbose",
     "coverage": "snyk test && npm run build && nyc ava && nyc report --reporter=html"
   },
   "dependencies": {
@@ -63,6 +63,7 @@
     "iflow-bluebird": "1.1.18",
     "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
+    "nock": "8.0.0",
     "nodemon": "1.10.0",
     "nyc": "8.0.0",
     "rimraf": "2.5.4",
