--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "postinstall": "snyk protect",
     "start": "node dist/main.js",
     "build": "npm run clean && babel src --source-maps --out-dir dist",
-    "watch": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/main.js",
-    "repl": "(npm run build -- --watch &) && sleep 10 && nodemon -w dist dist/repl.js",
+    "build:watch": "npm run clean && babel src --source-maps --out-dir dist --watch",
+    "watch:main": "nodemon -w dist dist/main.js",
+    "watch:repl": "nodemon -w dist dist/repl.js",
     "deploy": "npm run lint && npm run build && modulus deploy -p okclaire",
     "clean": "rimraf .nyc_output coverage dist",
     "lint": "eslint src",
-    "test": "(npm run build -- --watch &) && sleep 10 && ava --watch --verbose",
-    "coverage": "snyk test && npm run build && nyc ava && nyc report --reporter=html"
+    "test": "snyk test && npm run build && ava --verbose",
+    "test:watch": "ava --watch --verbose --timeout=10s",
+    "test:coverage": "npm run build && nyc ava && nyc report --reporter=html"
   },
   "dependencies": {
     "app-module-path": "1.1.0",
