--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,7 @@
       "onlyFilesWithFlowAnnotation": false
     }
   },
-  "extends": "semistandard",
+  "extends": "standard",
   "rules": {
     "generator-star-spacing": 0,
     "new-cap": 0,
@@ -20,24 +20,31 @@
     "object-curly-spacing": 0,
     "object-shorthand": 0,
     "arrow-parens": 0,
+
     "babel/generator-star-spacing": 1,
     "babel/new-cap": 1,
     "babel/array-bracket-spacing": 1,
     "babel/object-curly-spacing": 1,
-    "babel/object-shorthand": ["warn", "methods"],
+    "babel/object-shorthand": [1, "methods"],
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
     "babel/flow-object-type": 1,
-    "space-before-function-paren": ["error", "never"],
-    "comma-dangle": ["error", "always-multiline"],
+    "babel/func-params-comma-dangle": [1, "always-multiline"],
+
+    "semi": [2, "always"],
+    "no-extra-semi": 2,
+    "semi-spacing": [2, {"before": false, "after": true}],
+    "space-before-function-paren": [2, "never"],
+    "comma-dangle": [1, "always-multiline"],
+    "no-console": 1,
+
     "flowtype/define-flow-type": 1,
-    "flowtype/require-parameter-type": 0,
-    "flowtype/require-return-type": 0,
+    "flowtype/require-parameter-type": 1,
+    "flowtype/require-return-type": 1,
     "flowtype/space-after-type-colon": 1,
     "flowtype/space-before-type-colon": [1, "never"],
     "flowtype/type-id-match": [1, "^([A-Z][a-z0-9]+)+Type$"],
     "flowtype/use-flow-type": 1,
-    "flowtype/valid-syntax": 1,
-    "camelcase": 0
+    "flowtype/valid-syntax": 1
   }
 }
