--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Bot for Real Estate",
   "main": "dist/main.js",
   "private": true,
-  "snyk": true,
   "scripts": {
-    "postinstall": "snyk protect",
     "start": "node dist/main.js",
-    "build": "babel src --source-maps --out-dir dist",
-    "deploy": "npm run clean && npm run build && modulus deploy -p okclaire",
+    "deploy": "npm run build && modulus deploy -p okclaire",
+    "build": "npm run clean && babel src --source-maps --out-dir dist",
     "watch": "(npm run build -- --watch &) && nodemon -w dist dist/main.js",
     "repl": "(npm run build -- --watch &) && nodemon -w dist dist/repl.js",
     "test": "(npm run build -- --watch &) && ava --verbose",
@@ -19,7 +17,7 @@
   "dependencies": {
     "app-module-path": "1.1.0",
     "babel-runtime": "6.11.6",
-    "bluebird": "3.4.1",
+    "bluebird": "3.4.3",
     "forecast-io": "1.0.2",
     "globby": "6.0.0",
     "googlemaps": "1.11.1",
@@ -27,44 +25,41 @@
     "is-url": "1.2.2",
     "koa": "2.0.0",
     "koa-router": "7.0.1",
-    "mongoose": "4.5.8",
+    "mongoose": "4.5.10",
     "morgan": "1.7.0",
-    "opbeat": "3.15.0",
+    "opbeat": "3.17.1",
     "raw-body": "2.1.7",
-    "snyk": "1.18.1",
     "source-map-support": "0.4.2",
     "winston": "2.2.0"
   },
   "devDependencies": {
     "ava": "0.16.0",
-    "babel-cli": "6.11.4",
+    "babel-cli": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-plugin-default-import-checker": "1.0.8",
-    "babel-plugin-istanbul": "1.0.3",
+    "babel-plugin-istanbul": "2.0.0",
     "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-syntax-flow": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-flow-strip-types": "6.8.0",
+    "babel-plugin-transform-flow-strip-types": "6.14.0",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-plugin-typecheck": "3.9.0",
-    "babel-preset-es2015": "6.13.2",
+    "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.11.6",
-    "eslint": "2.13.1",
-    "eslint-config-semistandard": "6.0.2",
-    "eslint-config-standard": "5.3.5",
+    "babel-register": "6.14.0",
+    "eslint": "3.4.0",
+    "eslint-config-standard": "6.0.0",
     "eslint-plugin-babel": "3.3.0",
-    "eslint-plugin-flowtype": "2.7.0",
-    "eslint-plugin-promise": "1.3.2",
-    "eslint-plugin-react": "5.2.2",
-    "eslint-plugin-standard": "1.3.3",
+    "eslint-plugin-flowtype": "2.11.4",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-standard": "2.0.0",
     "espower": "1.3.2",
     "iflow-bluebird": "1.1.18",
     "longjohn": "0.2.11",
     "mockgoose": "6.0.6",
+    "modulus": "6.3.1",
     "nock": "8.0.0",
-    "nodemon": "1.10.0",
-    "nyc": "8.0.0",
+    "nodemon": "1.10.2",
     "rimraf": "2.5.4",
     "supertest": "2.0.0",
     "supertest-as-promised": "4.0.0"
@@ -82,18 +77,5 @@
       "./dist/test"
     ],
     "babel": "inherit"
-  },
-  "nyc": {
-    "require": [
-      "babel-register",
-      "./dist/test"
-    ],
-    "include": [
-      "src",
-      "dist",
-      "tests"
-    ],
-    "sourceMap": false,
-    "instrument": false
   }
 }
