--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "scripts": {
     "start": "node dist/main.js",
-    "deploy": "npm run build && modulus deploy -p okclaire",
-    "build": "npm run clean && babel src --source-maps --out-dir dist",
-    "watch": "(npm run build -- --watch &) && nodemon -w dist dist/main.js",
-    "repl": "(npm run build -- --watch &) && nodemon -w dist dist/repl.js",
-    "test": "(npm run build -- --watch &) && ava --verbose",
-    "clean": "rimraf .nyc_output coverage dist",
+    "build": "babel src --source-maps --out-dir dist",
+    "watch": "(npm run build -- --watch &) && nodemon --delay 0.5 -w dist dist/main.js",
+    "repl": "(npm run build -- --watch &) && nodemon --delay 0.5 -w dist dist/repl.js",
+    "test": "(npm run build -- --watch &) && sleep 10 && ava --watch --verbose",
+    "deploy": "npm run clean && npm run build && modulus deploy -p okclaire",
+    "clean": "rimraf dist",
     "lint": "eslint src"
   },
   "dependencies": {
@@ -29,6 +29,8 @@
     "morgan": "1.7.0",
     "opbeat": "3.17.1",
     "raw-body": "2.1.7",
+    "request": "2.74.0",
+    "request-promise": "4.1.1",
     "source-map-support": "0.4.2",
     "winston": "2.2.0"
   },
@@ -36,25 +38,23 @@
     "ava": "0.16.0",
     "babel-cli": "6.14.0",
     "babel-eslint": "6.1.2",
-    "babel-plugin-default-import-checker": "1.0.8",
-    "babel-plugin-istanbul": "2.0.0",
     "babel-plugin-source-map-support-for-6": "0.0.5",
     "babel-plugin-syntax-flow": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-flow-strip-types": "6.14.0",
+    "babel-plugin-transform-promise-to-bluebird": "1.1.0",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-plugin-typecheck": "3.9.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.14.0",
+    "babel-watch": "2.0.2",
     "eslint": "3.4.0",
     "eslint-config-standard": "6.0.0",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-flowtype": "2.11.4",
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-standard": "2.0.0",
-    "espower": "1.3.2",
-    "iflow-bluebird": "1.1.18",
     "modulus": "6.3.1",
     "nock": "8.0.0",
     "nodemon": "1.10.2",
@@ -70,6 +70,7 @@
       "dist/**/*.js"
     ],
     "concurrency": 5,
+    "timeout": "30s",
     "require": [
       "babel-register",
       "./dist/test"
